<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="344dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/rightangle_board"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starttime" />

        <TextView
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/rightangle_board"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nearbusstation" />

        <TextView
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/rightangle_board"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert" />

        <TextView
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/rightangle_board"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>