<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="113dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/border"
    app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/routename"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/routename"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startstation"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/startstation"
        android:layout_marginTop="6dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/routename"
        app:layout_constraintTop_toBottomOf="@+id/routename"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="30dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/dash"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startstation"
        app:layout_constraintTop_toBottomOf="@+id/routename"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/endstation"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/endstation"
        android:textSize="15sp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/routename"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toEndOf="@+id/routename"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        app:srcCompat="@android:drawable/btn_star_big_off" />


    <!--        <selector xmlns:android="http://schemas.android.com/apk/res/android">-->
    <!--        </selector>-->


    <!--        <selector xmlns:android="http://schemas.android.com/apk/res/android">-->
    <!--            <item android:drawable="@android:drawable/btn_star_big_on"></item>-->
    <!--            <item android:drawable="@android:drawable/btn_star_big_off"-->
    <!--                android:state_pressed="true"></item>-->
    <!--        </selector>-->


</androidx.constraintlayout.widget.ConstraintLayout>
